--- a/Romanian/main/AuthManager.apk/res/values-ro/strings.xml
+++ b/Romanian/main/AuthManager.apk/res/values-ro/strings.xml
@@ -55,18 +55,18 @@
     <string name="Generic_UserApp">Aplicaţii descărcate (%d)</string>
     <string name="Generic_Version">Versiune: %1$s</string>
     <string name="HIPS_Action_Accept">Permiteţi</string>
-    <string name="HIPS_Action_Accept_Colored">&lt;font color=#478800&gt;Acceptare&lt;/font&gt;</string>
+    <string name="HIPS_Action_Accept_Colored">&lt;font color=#478800&gt;Acceptați&lt;/font&gt;</string>
     <string name="HIPS_Action_Accept_Once">Permiteţi o dată</string>
     <string name="HIPS_Action_Prompt">Solicitare</string>
     <string name="HIPS_Action_Prompt_Colored">&lt;font color=#FF8A00>Solicitare&lt;/font></string>
     <string name="HIPS_Action_Reject">Refuzaţi</string>
-    <string name="HIPS_Action_Reject_Colored">&lt;font color=#DF0000>Refuz&lt;/font></string>
+    <string name="HIPS_Action_Reject_Colored">&lt;font color=#DF0000>Refuzați&lt;/font></string>
     <string name="HIPS_Action_Reject_Once">Refuzaţi o dată</string>
     <string name="HIPS_Group_DataPrivacy">Confidenţialitate</string>
     <string name="HIPS_Group_Expense">Securitate</string>
     <string name="HIPS_Group_Internet">Acces internet</string>
     <string name="HIPS_Group_Location">Localizare</string>
-    <string name="HIPS_Group_PIM">Informaţie personală</string>
+    <string name="HIPS_Group_PIM">Informaţii personale</string>
     <string name="HIPS_Group_PhoneID">Identificare telefon</string>
     <string name="HIPS_Group_ROOT">Acces root</string>
     <string name="HIPS_Perm_AdjustRingerVolume">Ajustare volum sonerie</string>
@@ -83,12 +83,12 @@
     <string name="HIPS_Perm_Bluetooth_Connectivity_Desc">Activare bluetooth</string>
     <string name="HIPS_Perm_Bluetooth_Connectivity_Hint">%1$s aplicaţii pot activa bluetooth-ul</string>
     <string name="HIPS_Perm_Body_Sensors">Senzori corporali</string>
-    <string name="HIPS_Perm_Body_Sensors_Desc">senzori corporali(de ex. senzori pentru măsurarea ritmului cardiac)</string>
+    <string name="HIPS_Perm_Body_Sensors_Desc">Accesare senzori corporali(de ex. senzori pentru măsurarea ritmului cardiac)</string>
     <string name="HIPS_Perm_Calendar">Accesare calendar</string>
-    <string name="HIPS_Perm_Calendar_Desc">Accesare calendar</string>
+    <string name="HIPS_Perm_Calendar_Desc">Accesare date din Calendar</string>
     <string name="HIPS_Perm_Calendar_Hint">%1$s aplicaţii pot accesa calendarul</string>
     <string name="HIPS_Perm_Call">Apelare</string>
-    <string name="HIPS_Perm_CallLog">Modificare și ștergere jurnal apeluri</string>
+    <string name="HIPS_Perm_CallLog">Jurnal apeluri</string>
     <string name="HIPS_Perm_CallLog_Access">Citire jurnal apeluri</string>
     <string name="HIPS_Perm_CallLog_Desc">Modificare și ștergere jurnal apeluri</string>
     <string name="HIPS_Perm_CallLog_Hint">%1$s aplicaţii pot să modifice și să șteargă jurnalul apelurilor</string>
@@ -102,7 +102,7 @@
     <string name="HIPS_Perm_Call_Hint">%1$s aplicaţii pot să iniţieze, să accepte sau să încheie apelurile vocale</string>
     <string name="HIPS_Perm_Call_Number">Apelare %1$s</string>
     <string name="HIPS_Perm_CancelMissedCalls">Ştergere notificare despre apelurile nepreluate</string>
-    <string name="HIPS_Perm_Contact">Modificare și ștergere contacte</string>
+    <string name="HIPS_Perm_Contact">Agendă</string>
     <string name="HIPS_Perm_Contact_Access">Citire listă de contacte</string>
     <string name="HIPS_Perm_Contact_Desc">Modificare și ștergere contacte</string>
     <string name="HIPS_Perm_Contact_Hint">%1$s aplicaţii pot să modifice și să șteargă lista de contacte</string>
@@ -111,7 +111,7 @@
     <string name="HIPS_Perm_DisableKeyguard_Hint">%1$s aplicaţii pot debloca ecranul</string>
     <string name="HIPS_Perm_EndCall">Finalizare apel</string>
     <string name="HIPS_Perm_External_Storage">Accesare și modificare fișiere din memoria internă</string>
-    <string name="HIPS_Perm_External_Storage_Desc">"adăugare și ștergere fișiere din memoria internă"</string>
+    <string name="HIPS_Perm_External_Storage_Desc">"Adăugare și ștergere fișiere din memoria internă"</string>
     <string name="HIPS_Perm_GetCallState">Obţinere stare apel</string>
     <string name="HIPS_Perm_ListenCallState">Monitorizare stare apel</string>
     <string name="HIPS_Perm_Location">Localizare</string>
@@ -123,13 +123,13 @@
     <string name="HIPS_Perm_Location_Monitor">Urmărire poziţie</string>
     <string name="HIPS_Perm_Location_Source_Cellular">Urmărire poziţie prin reţeaua celulară</string>
     <string name="HIPS_Perm_Location_Source_GPS">Urmărire poziţie prin GPS</string>
-    <string name="HIPS_Perm_Location_Source_Network">Urmărire poziţie prin reţea</string>
-    <string name="HIPS_Perm_MMS">Scriere și ștergere mesaje MMS</string>
+    <string name="HIPS_Perm_Location_Source_Network">Urmărire poziţie prin intermediul reţelei</string>
+    <string name="HIPS_Perm_MMS">Mesaje MMS</string>
     <string name="HIPS_Perm_MMS_Access">Citire mesaje MMS</string>
     <string name="HIPS_Perm_MMS_Desc">Scriere și ștergere mesaje MMS</string>
     <string name="HIPS_Perm_MMS_Hint">%1$s aplicaţii pot citi şi şterge mesajele MMS</string>
-    <string name="HIPS_Perm_MobileNetwork">Reţea mobilă</string>
-    <string name="HIPS_Perm_MobileNetwork_Desc">Reţeaua mobilă</string>
+    <string name="HIPS_Perm_MobileNetwork">Reţea de date mobile</string>
+    <string name="HIPS_Perm_MobileNetwork_Desc">Accesare a reţelei de date mobile</string>
     <string name="HIPS_Perm_MobileNetwork_Hint">%1$s aplicaţii pot accesa internetul prin intermediul reţelei mobile</string>
     <string name="HIPS_Perm_Mobile_Connectivity">Reţele mobile</string>
     <string name="HIPS_Perm_Mobile_Connectivity_Desc">Activare acces la reţelele de telefonie mobilă</string>
@@ -143,9 +143,9 @@
     <string name="HIPS_Perm_Network_UnknownAddr">Adresă necunoscută</string>
     <string name="HIPS_Perm_Network_WIFIEvent">Utilizare reţea Wi-Fi</string>
     <string name="HIPS_Perm_Notification">Afişare notificări</string>
-    <string name="HIPS_Perm_Notification_Desc">Afişare notificări</string>
+    <string name="HIPS_Perm_Notification_Desc">Afişare notificări în bara de stare</string>
     <string name="HIPS_Perm_Notification_Hint">%1$s aplicaţii pot afişa notificări în bara de stare</string>
-    <string name="HIPS_Perm_PhoneID">ID telefon</string>
+    <string name="HIPS_Perm_PhoneID">Obținere ID telefon</string>
     <string name="HIPS_Perm_PhoneID_Desc">Obţinere ID telefon, inclusiv IMEI, IMSI, etc</string>
     <string name="HIPS_Perm_PhoneID_Hint">%1$s aplicaţii pot obţine ID-ul telefonului</string>
     <string name="HIPS_Perm_PhoneID_ICCID">Obţinere SN card SIM</string>
@@ -154,15 +154,15 @@
     <string name="HIPS_Perm_PhoneID_IMSI">Obţinere IMSI</string>
     <string name="HIPS_Perm_PhoneID_Number">Obţinere număr de telefon</string>
     <string name="HIPS_Perm_PromptAll">Solicitare toate</string>
-    <string name="HIPS_Perm_ROOT">Root</string>
-    <string name="HIPS_Perm_ROOT_Desc">Solicitare permisiune Root</string>
+    <string name="HIPS_Perm_ROOT">Acces Root</string>
+    <string name="HIPS_Perm_ROOT_Desc">Solicitare permisiune acces Root</string>
     <string name="HIPS_Perm_ROOT_Hint">%1$s aplicaţii pot obţine permisiune Root</string>
-    <string name="HIPS_Perm_ROOT_Title">Obţinere permisiune Root</string>
+    <string name="HIPS_Perm_ROOT_Title">Obţinere permisiune acces Root</string>
     <string name="HIPS_Perm_Read_Call_Log">Citire istoric apeluri</string>
     <string name="HIPS_Perm_Read_Call_Log_Desc">Citire istoric apeluri</string>
     <string name="HIPS_Perm_Read_Call_Log_Hint">%1$s aplicații pot citi istoricul apelurilor</string>
     <string name="HIPS_Perm_Read_Contact">Citire contacte</string>
-    <string name="HIPS_Perm_Read_Contact_Desc">Citire contacte</string>
+    <string name="HIPS_Perm_Read_Contact_Desc">Citirea listei de contacte</string>
     <string name="HIPS_Perm_Read_Contact_Hint">%1$s aplicații pot citi lista de contacte</string>
     <string name="HIPS_Perm_Read_MMS">Citire mesaje multimedia</string>
     <string name="HIPS_Perm_Read_MMS_Desc">Citire mesaje multimedia</string>
@@ -174,19 +174,19 @@
     <string name="HIPS_Perm_Recorder_AudioVideo">Înregistrare audio şi video</string>
     <string name="HIPS_Perm_Recorder_Camera">Captare imagine</string>
     <string name="HIPS_Perm_Recorder_Video">Înregistrare video</string>
-    <string name="HIPS_Perm_Recorder_VoiceCall">Înregistrare audio în apel</string>
+    <string name="HIPS_Perm_Recorder_VoiceCall">Înregistrare audio în timpul apelurilor</string>
     <string name="HIPS_Perm_RejectAll">Refuz toate</string>
     <string name="HIPS_Perm_SMS">Scriere și ștergere mesaje SMS</string>
     <string name="HIPS_Perm_SMS_Access">Citire mesaje SMS</string>
     <string name="HIPS_Perm_SMS_Desc">Scriere și ștergere mesaje SMS</string>
     <string name="HIPS_Perm_SMS_Hint">%1$s aplicaţii pot scrie şi şterge mesaje SMS</string>
     <string name="HIPS_Perm_SendMMS">Expediere MMS</string>
-    <string name="HIPS_Perm_SendMMS_Desc">Expediere directă MMS</string>
+    <string name="HIPS_Perm_SendMMS_Desc">Expediere directă mesaje MMS</string>
     <string name="HIPS_Perm_SendMMS_Hint">%1$s aplicaţii pot expedia mesaje MMS</string>
     <string name="HIPS_Perm_SendSMS">Expediere SMS</string>
     <string name="HIPS_Perm_SendSMS_Content">Conţinut:</string>
     <string name="HIPS_Perm_SendSMS_Data">Trimitere SMS către %1$s:%2$d</string>
-    <string name="HIPS_Perm_SendSMS_Desc">Expediere directă SMS</string>
+    <string name="HIPS_Perm_SendSMS_Desc">Expediere directă mesaje SMS</string>
     <string name="HIPS_Perm_SendSMS_Hint">%1$s aplicaţii pot expedia mesaje SMS</string>
     <string name="HIPS_Perm_SendSMS_Port">Port dest.:</string>
     <string name="HIPS_Perm_SendSMS_Recipient">Destinatar:</string>
@@ -205,10 +205,10 @@
     <string name="HIPS_Perm_VideoRecorder_Desc">Fotografii și videoclipuri</string>
     <string name="HIPS_Perm_VideoRecorder_Hint">%1$s aplicaţii pot face fotografii şi înregistra videoclipuri</string>
     <string name="HIPS_Perm_WIFINetwork">Reţea WI-FI</string>
-    <string name="HIPS_Perm_WIFINetwork_Desc">Reţeaua WI-FI</string>
-    <string name="HIPS_Perm_WIFINetwork_Hint">%1$s aplicaţii pot accesa internetul prin intermediul reţelei WI-FI</string>
-    <string name="HIPS_Perm_WIFI_Connectivity">WI-FI</string>
-    <string name="HIPS_Perm_WIFI_Connectivity_Desc">Activare Wi-Fi</string>
+    <string name="HIPS_Perm_WIFINetwork_Desc">Accesare internet prin Wi-Fi</string>
+    <string name="HIPS_Perm_WIFINetwork_Hint">%1$s aplicaţii pot accesa internetul prin intermediul reţelei Wi-Fi</string>
+    <string name="HIPS_Perm_WIFI_Connectivity">Wi-Fi</string>
+    <string name="HIPS_Perm_WIFI_Connectivity_Desc">Activare rețea Wi-Fi</string>
     <string name="HIPS_Perm_WIFI_Connectivity_Hint">%1$s aplicaţii pot activa Wi-Fi</string>
     <string name="HIPS_Perm_Wakelock">Trezire telefon</string>
     <string name="HIPS_Perm_Wakelock_Desc">Trezire telefon</string>
@@ -217,25 +217,25 @@
     <string name="HIPS_Perm_Xiaomi_Account_Desc">Accesare cont Mi</string>
     <string name="HIPS_Perm_Xiaomi_Account_Hint">%1$s aplicații pot accesa contul dvs. Mi</string>
     <string name="HIPS_Perm_add_voicemail">Mesaje vocale</string>
-    <string name="HIPS_Perm_add_voicemail_Desc">adăugare mesaje vocale</string>
+    <string name="HIPS_Perm_add_voicemail_Desc">Adăugare mesaje vocale</string>
     <string name="HIPS_Perm_background_start_activity">Pornire în fundal</string>
-    <string name="HIPS_Perm_background_start_activity_Desc">pornire în fundal</string>
+    <string name="HIPS_Perm_background_start_activity_Desc">Pornire în fundal</string>
     <string name="HIPS_Perm_get_accounts">Accesare conturi de pe telefon</string>
-    <string name="HIPS_Perm_get_accounts_Desc">accesarea tuturor conturilor de pe telefon</string>
+    <string name="HIPS_Perm_get_accounts_Desc">Accesarea tuturor conturilor de pe telefon</string>
     <string name="HIPS_Perm_get_tasks">Obținerea sarcinilor</string>
-    <string name="HIPS_Perm_get_tasks_Desc">obținerea sarcinilor</string>
+    <string name="HIPS_Perm_get_tasks_Desc">Obținerea tuturor sarcinilor</string>
     <string name="HIPS_Perm_install_shortcut">Widgeturi pe ecranul principal</string>
-    <string name="HIPS_Perm_install_shortcut_Desc">adăugarea de widgeturi pe ecranul principal</string>
+    <string name="HIPS_Perm_install_shortcut_Desc">Adăugarea de widgeturi pe ecranul principal</string>
     <string name="HIPS_Perm_process_nfc">NFC</string>
-    <string name="HIPS_Perm_process_nfc_Desc">accesarea dispozitivului NFC</string>
-    <string name="HIPS_Perm_process_outgoing_calls">Accesarea aplicației Telefon</string>
-    <string name="HIPS_Perm_process_outgoing_calls_Desc">monitorizarea și încheierea apelurilor</string>
+    <string name="HIPS_Perm_process_nfc_Desc">Accesarea dispozitivului NFC</string>
+    <string name="HIPS_Perm_process_outgoing_calls">Accesare Telefon</string>
+    <string name="HIPS_Perm_process_outgoing_calls_Desc">Monitorizarea și încheierea apelurilor</string>
     <string name="HIPS_Perm_read_notification_sms">Serviciu SMS</string>
-    <string name="HIPS_Perm_read_notification_sms_Desc">citire SMS-uri</string>
+    <string name="HIPS_Perm_read_notification_sms_Desc">Citire SMS-uri</string>
     <string name="HIPS_Perm_show_when_locked">Afișare în Blocarea ecranului</string>
-    <string name="HIPS_Perm_show_when_locked_Desc">fie afișată în Blocarea ecranului</string>
+    <string name="HIPS_Perm_show_when_locked_Desc">Afișare în Blocarea ecranului</string>
     <string name="HIPS_Perm_use_sip">Servicii video</string>
-    <string name="HIPS_Perm_use_sip_Desc">utilizarea SIP pentru partajare videoclipuri</string>
+    <string name="HIPS_Perm_use_sip_Desc">Utilizarea SIP pentru partajare videoclipuri</string>
     <string name="HIPS_SecurityPrompt_Accept">Permit (%d)</string>
     <string name="HIPS_SecurityPrompt_AcceptRoot">Permiteţi</string>
     <string name="HIPS_SecurityPrompt_Accept_Once">Permiteţi o dată (%d)</string>
@@ -289,7 +289,7 @@
     <string name="permission_group_title_settings_related">Setări</string>
     <string name="permission_request_title">Solicitare de acordare permisiuni</string>
     <string name="permission_warning_template">Permiteți %1$s pentru %2$s ?</string>
-    <string name="permisson_reject_notice_toast_text2">"nu are permisiunea să %1$s."</string>
+    <string name="permisson_reject_notice_toast_text2">"nu are permisiunea de %1$s."</string>
     <string name="screen_overlay_button">Accesați Setări</string>
     <string name="screen_overlay_message">Pentru a modifica această setare de permisiune, va trebui să opriți suprapunerea de elemente vizuale din Setări &gt; Aplicații</string>
     <string name="screen_overlay_title">Suprapunere elemente vizuale detectată</string>
