--- a/Romanian/main/Calendar.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Calendar.apk/res/values-ro/strings.xml
@@ -28,7 +28,7 @@
   <string name="ad_card_installed">instalat</string>
   <string name="ad_card_installing">instalare</string>
   <string name="ad_card_network_error">Nu există nicio conexiune de rețea, vă rugăm să încercați din nou mai târziu!</string>
-  <string name="ad_card_spread">Partajați</string>
+  <string name="ad_card_spread">Publicitate</string>
     <string name="add_calendar">Abonare</string>
   <string name="add_card">Adaugă carte</string>
     <string name="add_topic_success">Abonare reuşită la \"%s\"</string>
@@ -170,17 +170,17 @@
     <string name="event_full_date_format">dd/MM/yyyy</string>
     <string name="event_hide_more">Ascundeţi</string>
     <string name="event_info_descrip">Descriere\u0009\u0009\u0009</string>
-    <string name="event_info_end">"Sfârşit "</string>
+    <string name="event_info_end">Sfârşit\u0009\u0009\u0009 </string>
     <string name="event_info_from">De la</string>
-    <string name="event_info_jump_to_email">Mergeți la E-mail</string>
+    <string name="event_info_jump_to_email">Deschideți e-mailul</string>
     <string name="event_info_reminders_label">Mementouri</string>
     <string name="event_info_reminders_label_1">Memento</string>
     <string name="event_info_reminders_label_more">Memento %d</string>
-    <string name="event_info_repeat">"Repetare: "</string>
+    <string name="event_info_repeat">Repetare\u0009</string>
     <string name="event_info_title">Vizualizaţi evenimentul</string>
     <string name="event_info_title_invite">Invitaţie la întâlnire</string>
-    <string name="event_info_when">"Când: "</string>
-    <string name="event_info_where">"Unde: "</string>
+    <string name="event_info_when">Când\u0009\u0009</string>
+    <string name="event_info_where">Unde\u0009</string>
     <string name="event_lunar_month">Lună</string>
     <string name="event_show_more">Mai multe opţiuni</string>
     <string name="event_title">Titlu</string>
