--- a/Romanian/main/Provision.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Provision.apk/res/values-ro/strings.xml
@@ -7,7 +7,7 @@
     <string name="congratulation_label">"Sunteți gata de start!​"</string>
     <string name="congratulation_title">Configurare finalizată</string>
     <string name="content_description_complete">Finalizat</string>
-    <string name="content_description_language_picker">Selectare limbă</string>
+    <string name="content_description_language_picker">Selectați limba</string>
     <string name="content_description_miui_version">MIUI 8</string>
     <string name="content_description_start">Start</string>
     <string name="desc_extra_fingerprint"/>
